--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MindMate AI – Mental Wellness for Africa</title>
+  <title>Africalm – Mental Wellness for Africa</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body { font-family: 'Inter', sans-serif; margin: 0; padding: 0; background: #f1f9ff; color: #333; }
@@ -22,13 +22,13 @@
 </head>
 <body>
   <header>
-    <h1>MindMate AI</h1>
+    <h1>Africalm </h1>
     <p>Your pocket companion for peace of mind</p>
   </header>
 
   <section class="section">
-    <h2>Why MindMate?</h2>
-    <p>Millions in Africa face stress and anxiety without daily mental health support. MindMate AI provides affordable, AI-powered tools for journaling, breathing, and goal tracking — all from your smartphone.</p>
+    <h2>Why Africalm?</h2>
+    <p>Millions in Africa face stress and anxiety without daily mental health support. Africalm provides affordable, AI-powered tools for journaling, breathing, and goal tracking — all from your smartphone.</p>
 
     <div class="features">
       <div class="feature">
@@ -56,7 +56,7 @@
   </section>
 
   <footer>
-    📍 Nairobi, Kenya | 📧 mindmate@founders.africa | IG: @MindMateAI
+    📍 Nairobi, Kenya | 📧 Africalm@founders.africa | IG: @Africalm | LinkedIn: Africalm | Facebook: Africalm | X: Africalm | TikTok: Africalm
   </footer>
 </body>
 </html>
