--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Africalm – Mental Wellness for Africa</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-  <style>
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+ <style>
     body { font-family: 'Inter', sans-serif; margin: 0; padding: 0; background: #f1f9ff; color: #333; }
     header { background: #2196F3; color: white; padding: 2rem; text-align: center; }
     header h1 { margin: 0; font-size: 2.5rem; }
@@ -18,7 +19,33 @@
     .cta { text-align: center; margin-top: 3rem; }
     .cta button { background: #4CAF50; color: white; padding: 1rem 2rem; font-size: 1.1rem; border: none; border-radius: 8px; cursor: pointer; }
     footer { text-align: center; padding: 1rem; background: #e3f2fd; font-size: 0.9rem; }
-  </style>
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+ </style>.social-footer {
+  text-align: center;
+  padding: 20px;
+  background: #f5f5f5;
+  font-family: Arial, sans-serif;
+  border-top: 1px solid #ddd;
+}
+
+.social-icons a {
+  margin: 0 10px;
+  color: #333;
+  font-size: 24px;
+  transition: color 0.3s;
+  text-decoration: none;
+}
+
+.social-icons a:hover {
+  color: #0077b5;
+}
+
+.contact-info {
+  margin-top: 10px;
+  font-size: 16px;
+  color: #444;
+}
+
 </head>
 <body>
   <header>
@@ -56,7 +83,20 @@
   </section>
 
   <footer>
-    📍 Nairobi, Kenya | 📧 Africalm@founders.africa | IG: @Africalm | LinkedIn: Africalm | Facebook: Africalm | X: Africalm | TikTok: Africalm
   </footer>
+<!-- === Africalm Footer === -->
+<div class="social-footer">
+  <div class="social-icons">
+    <a href="https://www.instagram.com/Africalm" target="_blank"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.linkedin.com/in/Africalm" target="_blank"><i class="fab fa-linkedin"></i></a>
+    <a href="https://www.facebook.com/Africalm" target="_blank"><i class="fab fa-facebook"></i></a>
+    <a href="https://www.x.com/Africalm" target="_blank"><i class="fab fa-x-twitter"></i></a>
+    <a href="https://www.tiktok.com/@Africalm" target="_blank"><i class="fab fa-tiktok"></i></a>
+  </div>
+  <div class="contact-info">
+    📍 Nairobi, Kenya | 📧 <a href="mailto:africalm@founders.africa">africalm@founders.africa</a>
+  </div>
+</div>
+<!-- === End Footer === -->
 </body>
 </html>
