--- a/index.html
+++ b/index.html
@@ -20,32 +20,7 @@
     .cta button { background: #4CAF50; color: white; padding: 1rem 2rem; font-size: 1.1rem; border: none; border-radius: 8px; cursor: pointer; }
     footer { text-align: center; padding: 1rem; background: #e3f2fd; font-size: 0.9rem; }
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
- </style>.social-footer {
-  text-align: center;
-  padding: 20px;
-  background: #f5f5f5;
-  font-family: Arial, sans-serif;
-  border-top: 1px solid #ddd;
-}
-
-.social-icons a {
-  margin: 0 10px;
-  color: #333;
-  font-size: 24px;
-  transition: color 0.3s;
-  text-decoration: none;
-}
-
-.social-icons a:hover {
-  color: #0077b5;
-}
-
-.contact-info {
-  margin-top: 10px;
-  font-size: 16px;
-  color: #444;
-}
-
+ </style>
 </head>
 <body>
   <header>
